// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`incorrect-docblocks.js 1`] = `
"/**
 * External dependencies
 */
import fs from 'fs';

/**
 * Internal dependencies
 */
import chickenLibrary from 'chicken';
import okapiMe from 'okapi-me';

function hello() {}

"
`;

exports[`only-imports.js 1`] = `
"/**
 * External dependencies
 */
import fs from 'fs';

/**
 * Internal dependencies
 */
import chickenLibrary from 'chicken';
import okapiMe from 'okapi-me';

"
`;

exports[`with-body.js 1`] = `
"/**
 * External dependencies
 */
import fs from 'fs';

/**
 * Internal dependencies
 */
import chickenLibrary from 'chicken';
import okapiMe from 'okapi-me';

const x = 5;

"
`;
